# auto-decompress

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  commitlint.config.ts  deno.json  lefthook.yml
.serena/: project.yml
bit7z-rs/: Cargo.toml  README.md  build.rs
bit7z-rs/cpp/: bit7z_bridge.cpp  bit7z_bridge.hpp
bit7z-rs/examples/: list_archive.rs
bit7z-rs/src/: ffi.rs  lib.rs
normalize-filename/: Cargo.toml
normalize-filename/src/: lib.rs  magika.rs  normal.rs
normalize-filename/src/extension_detector/: magika.rs  mod.rs  normal.rs
scripts/: download_7z.ts
